# svg

./: .actup.toml  .dprint.jsonc  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  HANDOVER.md  ISSUE-PLAN-compat-ux.md  PIPELINE.md  README.md  SHIT.md  biome.json  deno.jsonc  dist-workspace.toml  justfile  package.json  pyproject.toml  runner.toml  rust-toolchain.toml  rustfmt.toml  tree-sitter.json
.cargo/: config.toml
.github/actions/append-release-notes/: action.yml  run.sh
.github/actions/crates-publish/: action.yml  run.sh
.github/actions/dist-artifact/: action.yml
.github/actions/download-archives/: action.yml  run.sh
.github/actions/grammar-publish/: action.yml  run.sh
.github/actions/npm-derive/: action.yml  run.sh
.github/actions/npm-publish/: action.yml  run.sh
.github/actions/npm-smoke/: action.yml  run.sh
.github/actions/package-asset/: action.yml  run.sh
.github/actions/publish-matrices/: action.yml  run.sh
.github/actions/publish-order/: action.yml  run.sh
.github/actions/release-matrix/: action.yml  run.sh
.github/actions/resolve-run-id/: action.yml  run.sh
.github/actions/verify-asset/: action.yml  run.sh
.github/actions/verify-tag-version/: action.yml  run.sh
.github/actions/version-check/: action.yml  carriers.mjs  check.mjs
.github/workflows/: ci.yml  crates-release.yml  npm-release.yml  publish-npm-oidc.yml  refresh-spec.yml  release.yml  spec-freshness.yml  tree-sitter-svg.yml  version-check.yml
.zed/: settings.json
crates/svg-color/: Cargo.toml  README.md
crates/svg-color/src/: extract.rs  parse.rs  present.rs
crates/svg-data/: Cargo.toml  README.md  build.rs
crates/svg-data-regen/: Cargo.toml
crates/svg-data-regen/src/: aria.rs  catalog.rs  chapter.rs  compat.rs  css.rs  discover.rs  extract.rs  fetch.rs  inventory.rs  legacy.rs  main.rs  npm.rs  paths.rs  provenance.rs  schema.rs  treesitter.rs  util.rs
crates/svg-data-regen/src/catalog/: animation.rs  grammar.rs  graph.rs  lifecycle.rs  see_references.rs  values.rs
crates/svg-data-regen/tests/: coverage_baseline.txt  coverage_gate.rs
crates/svg-data/data/: catalog.compat.json  catalog.core.json  catalog.core.schema.json  catalog.graph.json  catalog.json  catalog.schema.json  catalog.snapshot.schema.json  catalog.tree-sitter.json
crates/svg-data/data/reviewed/: bcd_deprecation_audit_2026-04.md
crates/svg-data/data/schemas/: element_attribute_matrix.schema.json  grammars.schema.json  snapshot.schema.json  union-attributes.schema.json
crates/svg-data/data/sources/: foreign-references.toml
crates/svg-data/examples/: generate_derived_membership.rs  generate_snapshot_seed.rs
crates/svg-data/src/: catalog.rs  compat_parse.rs  derived.rs  edition.rs  extraction.rs  inventory.rs  lib.rs  profile.rs  review.rs  snapshot_schema.rs  types.rs  xlink.rs
crates/svg-data/tests/: ed_presence_matrix.rs  edition_index.rs  edition_inventories.rs  spec_scan_repro.rs  svg11_first_snapshot.rs
crates/svg-format/: Cargo.toml  README.md
crates/svg-format/src/: lib.rs  text_content.rs
crates/svg-format/tests/: format_tests.rs
crates/svg-language-server/: AGENTS.md  Cargo.toml  README.md
crates/svg-language-server/src/: completion.rs  freshness.rs  hover.rs  lib.rs  main.rs  svgwg_drift.rs
crates/svg-language-server/tests/: completions.rs  definitions_and_hover.rs  diagnostics_and_actions.rs
crates/svg-language-server/tests/support/: mod.rs
crates/svg-lint/: Cargo.toml  README.md
crates/svg-lint/src/: lib.rs  namespaces.rs  types.rs  version.rs
crates/svg-references/: Cargo.toml  README.md
crates/svg-references/src/: lib.rs
crates/svg-tree/: Cargo.toml  README.md
crates/svg-tree/src/: lib.rs
distribution/npm/: targets.json  targets.schema.json
distribution/npm/scripts/: build-packages.ts  package.json
docs/: releasing.md
docs/specs/: 2026-06-03-spec-derivation-design.md
editors/zed-svg/: Cargo.toml  README.md  extension.toml
editors/zed-svg/src/: lib.rs
grammars/tree-sitter-svg/: .dprint.jsonc  CMakeLists.txt  Cargo.toml  Makefile  README.md  biome.json  build.zig  build.zig.zon  grammar.fixtures.ts  grammar.js  grammar.json  grammar.test.ts  package.json  pom.xml  pyproject.toml  tree-sitter.json  tsconfig.json
grammars/tree-sitter-svg-paint/: CMakeLists.txt  Cargo.toml  Makefile  README.md  build.zig.zon  package.json  pom.xml  pyproject.toml  tsconfig.json
grammars/tree-sitter-svg-paint/scripts/: ensure-native.mjs
grammars/tree-sitter-svg-path/: CMakeLists.txt  Cargo.toml  Makefile  README.md  build.zig.zon  grammar.js  package.json  pom.xml  pyproject.toml  tree-sitter.json  tsconfig.json
grammars/tree-sitter-svg-path/scripts/: ensure-clangd-headers.mjs  ensure-native.mjs
grammars/tree-sitter-svg-path/src/: grammar.json  node-types.json  scanner.c
grammars/tree-sitter-svg-transform/: CMakeLists.txt  Cargo.toml  Makefile  README.md  build.zig.zon  package.json  pom.xml  pyproject.toml
grammars/tree-sitter-svg-transform/bindings/python/tests/: test_binding.py
grammars/tree-sitter-svg-transform/bindings/rust/: build.rs
grammars/tree-sitter-svg-transform/scripts/: ensure-native.mjs
grammars/tree-sitter-svg/bindings/node/: binding_test.js
grammars/tree-sitter-svg/bindings/python/tests/: test_binding.py
grammars/tree-sitter-svg/bindings/python/tree_sitter_svg/: __init__.py
grammars/tree-sitter-svg/bindings/rust/: build.rs
grammars/tree-sitter-svg/queries/: highlights.scm  injections.scm  textobjects.scm
grammars/tree-sitter-svg/scripts/: ensure-native.mjs  ensure-native.ts  gen-corpus.ts
grammars/tree-sitter-svg/src/: grammar.json  node-types.json  parser.c  scanner.c
grammars/tree-sitter-svg/test/corpus/: edge_cases.txt  errors.txt  generated_catalog_elements.txt  long_tail_attributes.txt  svg_features.txt  typed_attributes.txt
grammars/tree-sitter-svg/test/regex_samples/: regex_harness.test.ts  regex_harness.ts
plans/: cheeky-toasting-raven.md
scripts/: refresh-editions.ts  refresh-svgwg.ts  release-prepare.ts  release-tags.ts
workers/svg-compat/: deno.jsonc
(+55 files in other folders)
