[package]
name                 = "svg-data"
version.workspace    = true
authors.workspace    = true
edition.workspace    = true
description          = "Structured SVG specification data, extracted from canonical upstream"
homepage.workspace   = true
repository.workspace = true
license.workspace    = true
keywords.workspace   = true
categories.workspace = true
build                = "build.rs"

[[bin]]
name              = "spec-freshness"
path              = "src/bin/spec-freshness.rs"
required-features = ["freshness-cli"]

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
ureq       = { workspace = true, optional = true }

[build-dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }

[features]
freshness-cli = ["ureq"]

[lints]
workspace = true
