[package]
name                 = "svg-data"
version.workspace    = true
authors.workspace    = true
edition.workspace    = true
description          = "Structured SVG specification data, extracted from canonical upstream"
homepage.workspace   = true
repository.workspace = true
license.workspace    = true
keywords.workspace   = true
categories.workspace = true
build                = "build.rs"

# svgwg-drift is internal spec tooling, not a distributable app
[package.metadata.dist]
dist = false

[[bin]]
name              = "svgwg-drift"
path              = "src/bin/svgwg-drift.rs"
required-features = ["drift-cli"]

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
ureq       = { workspace = true, optional = true }

[build-dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }

[features]
drift-cli = ["ureq"]

[lints]
workspace = true
