[package]
name                 = "svg-language-server"
version.workspace    = true
authors.workspace    = true
edition.workspace    = true
description          = "LSP server for SVG"
readme               = "README.md"
homepage             = "https://github.com/kjanat/svg/tree/HEAD/crates/svg-language-server"
repository.workspace = true
license.workspace    = true
keywords             = ["completions", "diagnostics", "language-server", "lsp", "svg"]
categories           = ["development-tools", "text-editors"]
include              = ["!/tests/AGENTS.md", "/README.md", "/assets/*", "/src/*", "/tests/*"]

[lib]
name = "svg_language_server"
path = "src/lib.rs"

[[bin]]
name = "svg-language-server"
path = "src/main.rs"

[dependencies]
base64.workspace             = true
serde_json.workspace         = true
tokio.workspace              = true
tower-lsp-server.workspace   = true
tracing.workspace            = true
tracing-appender.workspace   = true
tracing-subscriber.workspace = true
tree-sitter.workspace        = true
ureq.workspace               = true
url.workspace                = true

svg-color.workspace       = true
svg-data.workspace        = true
svg-format.workspace      = true
svg-lint.workspace        = true
svg-references.workspace  = true
svg-tree.workspace        = true
tree-sitter-svg.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
