[project]
name            = "tree-sitter-svg-transform"
version         = "0.1.0"
description     = "SVG transform-list grammar for Tree-sitter"
readme          = "README.md"
requires-python = ">=3.10"
license         = "MIT OR Apache-2.0"
authors         = [{ name = "Kaj Kowalski", email = "info@kajkowalski.nl" }]
keywords        = ["incremental", "parsing", "svg-transform", "tree-sitter"]
classifiers     = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/kjanat/svg"

[project.optional-dependencies]
core = ["tree-sitter~=0.25"]

[dependency-groups]
dev = ["basedpyright", "ruff", "setuptools>=77.0.0", "tree-sitter~=0.25", "ty", "wheel"]

[build-system]
requires      = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.basedpyright]
include                = ["bindings/python", "setup.py"]
venvPath               = "../../"
venv                   = ".venv"
reportMissingTypeStubs = false

[tool.cibuildwheel]
build          = "cp310-*"
build-frontend = "build"

[tool.ty.environment]
python = "../../.venv"
